# kis-omega

./: .gitignore  .token.json  README.md  memos.txt  pyproject.toml  requirements.txt
data/: news_summary.csv  news_summary_history.csv  samsung_features.csv  sources.yaml  topics.yaml
models/: samsung_rf.pkl
src/data/: news_summary.csv  news_summary_history.csv
src/data/news/battery/: index_history.parquet  latest_index.parquet  latest_rows.parquet
src/data/news/samsung/: index_history.parquet  latest_index.parquet  latest_rows.parquet
src/data/news/semiconductor/: index_history.parquet  latest_index.parquet  latest_rows.parquet
src/data/news_raw/: latest.parquet  news_20250827_2352.parquet  summary_20250828.csv  summary_history.csv
src/kis_omega/: __init__.py  client.py  config.py  orders.py  quotes.py  tr_ids.py
src/kis_omega/analysis/: news_vs_price_hitratio.py
src/kis_omega/features/: merge_features.py
src/kis_omega/models/: train_predict.py
src/kis_omega/news/: enrich_topics.py  fetch.py  sources.yaml  topics.yaml
src/kis_omega/scripts/: auto_trade_samsung.py  demo_momentum_hanwha.py  demo_momentum_samsung.py  demo_paper_buy.py  demo_price_buy.py  download_prices.py  fetch_history_samsung.py  make_features_samsung.py  predict_tomorrow_samsung.py  smoke_price.py  smoke_token.py  train_model_samsung.py
src/kis_omega/strategy/: simple_momo.py
src/kis_omega/utils/: clock.py  dates.py  logging.py  paths.py
